_cache/v0.18.0/hwloc/specs.md
---
title: "hwloc"
layout: cache
categories: [package, v0.18.0]
meta: {"versions": ["2.7.1"], "compilers": ["gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["ubuntu18.04"], "platforms": ["linux"], "targets": ["x86_64"], "stacks": ["build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 4, "num_specs_by_stack": {"e4s": 2, "root": 4, "tutorial": 2, "build_systems": 1, "radiuss": 1, "data-vis-sdk": 1}}
spec_details: [{"hash": "e7fvahempj2gwm4634tge54gsloga36m", "compiler": "gcc@=7.5.0", "versions": ["2.7.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~cairo", "~cuda", "~gl", "~libudev", "+libxml2", "~netloc", "~nvml", "~opencl", "+pci", "~rocm", "+shared"], "stacks": ["e4s", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/hwloc-2.7.1/linux-ubuntu18.04-x86_64-gcc-7.5.0-hwloc-2.7.1-e7fvahempj2gwm4634tge54gsloga36m.spack"}, {"hash": "oixja6dnsnc4mydqswdya2nyt4rlcxpa", "compiler": "gcc@=7.5.0", "versions": ["2.7.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~cairo", "~cuda", "~gl", "~libudev", "+libxml2", "~netloc", "~nvml", "~opencl", "+pci", "~rocm", "+shared"], "stacks": ["tutorial", "build_systems", "root", "radiuss", "data-vis-sdk"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/hwloc-2.7.1/linux-ubuntu18.04-x86_64-gcc-7.5.0-hwloc-2.7.1-oixja6dnsnc4mydqswdya2nyt4rlcxpa.spack"}, {"hash": "27dpmmo2otm4djhiugwcehq7tze5ndlb", "compiler": "gcc@=8.4.0", "versions": ["2.7.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~cairo", "~cuda", "~gl", "~libudev", "+libxml2", "~netloc", "~nvml", "~opencl", "+pci", "~rocm", "+shared"], "stacks": ["tutorial", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/hwloc-2.7.1/linux-ubuntu18.04-x86_64-gcc-8.4.0-hwloc-2.7.1-27dpmmo2otm4djhiugwcehq7tze5ndlb.spack"}, {"hash": "pcppumg2yu5wjhrvr5nec22zvgw7afhv", "compiler": "gcc@=7.5.0", "versions": ["2.7.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~cairo", "+cuda", "~gl", "~libudev", "+libxml2", "~netloc", "~nvml", "~opencl", "+pci", "~rocm", "+shared"], "stacks": ["e4s", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/hwloc-2.7.1/linux-ubuntu18.04-x86_64-gcc-7.5.0-hwloc-2.7.1-pcppumg2yu5wjhrvr5nec22zvgw7afhv.spack"}]
---