_cache/v0.18.1/hwloc/specs.md
---
title: "hwloc"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["2.7.1"], "compilers": ["gcc@=7.3.1", "gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["amzn2", "ubuntu18.04"], "platforms": ["linux"], "targets": ["aarch64", "graviton2", "x86_64", "x86_64_v3", "x86_64_v4"], "stacks": ["aws-ahug", "aws-ahug-aarch64", "aws-isc", "aws-isc-aarch64", "build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 8, "num_specs_by_stack": {"aws-ahug": 2, "root": 8, "aws-isc": 2, "aws-ahug-aarch64": 2, "aws-isc-aarch64": 2, "e4s": 2, "build_systems": 1, "radiuss": 1, "tutorial": 2, "data-vis-sdk": 1}}
spec_details: [{"hash": "pmejrys2qhfzxheqz3j32jfuwzgifaxv", "compiler": "gcc@=7.3.1", "versions": ["2.7.1"], "os": "amzn2", "platform": "linux", "target": "x86_64_v4", "variants": ["~cairo", "~cuda", "~gl", "~libudev", "+libxml2", "~netloc", "~nvml", "~opencl", "+pci", "~rocm", "+shared"], "stacks": ["aws-ahug", "root", "aws-isc"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v4/gcc-7.3.1/hwloc-2.7.1/linux-amzn2-x86_64_v4-gcc-7.3.1-hwloc-2.7.1-pmejrys2qhfzxheqz3j32jfuwzgifaxv.spack"}, {"hash": "w7lcewzmfsbxgvnq6x6tqe2t6uydw3bf", "compiler": "gcc@=7.3.1", "versions": ["2.7.1"], "os": "amzn2", "platform": "linux", "target": "graviton2", "variants": ["~cairo", "~cuda", "~gl", "~libudev", "+libxml2", "~netloc", "~nvml", "~opencl", "+pci", "~rocm", "+shared"], "stacks": ["aws-ahug-aarch64", "root", "aws-isc-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-graviton2/gcc-7.3.1/hwloc-2.7.1/linux-amzn2-graviton2-gcc-7.3.1-hwloc-2.7.1-w7lcewzmfsbxgvnq6x6tqe2t6uydw3bf.spack"}, {"hash": "e7fvahempj2gwm4634tge54gsloga36m", "compiler": "gcc@=7.5.0", "versions": ["2.7.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~cairo", "~cuda", "~gl", "~libudev", "+libxml2", "~netloc", "~nvml", "~opencl", "+pci", "~rocm", "+shared"], "stacks": ["e4s", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/hwloc-2.7.1/linux-ubuntu18.04-x86_64-gcc-7.5.0-hwloc-2.7.1-e7fvahempj2gwm4634tge54gsloga36m.spack"}, {"hash": "mtjjnl7kdp2esewq77mngbfil52m5vmw", "compiler": "gcc@=7.3.1", "versions": ["2.7.1"], "os": "amzn2", "platform": "linux", "target": "aarch64", "variants": ["~cairo", "~cuda", "~gl", "~libudev", "+libxml2", "~netloc", "~nvml", "~opencl", "+pci", "~rocm", "+shared"], "stacks": ["aws-ahug-aarch64", "root", "aws-isc-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-aarch64/gcc-7.3.1/hwloc-2.7.1/linux-amzn2-aarch64-gcc-7.3.1-hwloc-2.7.1-mtjjnl7kdp2esewq77mngbfil52m5vmw.spack"}, {"hash": "bunlvjcr75ey5hlor7oyuewfjr57xjil", "compiler": "gcc@=7.3.1", "versions": ["2.7.1"], "os": "amzn2", "platform": "linux", "target": "x86_64_v3", "variants": ["~cairo", "~cuda", "~gl", "~libudev", "+libxml2", "~netloc", "~nvml", "~opencl", "+pci", "~rocm", "+shared"], "stacks": ["aws-ahug", "root", "aws-isc"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v3/gcc-7.3.1/hwloc-2.7.1/linux-amzn2-x86_64_v3-gcc-7.3.1-hwloc-2.7.1-bunlvjcr75ey5hlor7oyuewfjr57xjil.spack"}, {"hash": "oixja6dnsnc4mydqswdya2nyt4rlcxpa", "compiler": "gcc@=7.5.0", "versions": ["2.7.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~cairo", "~cuda", "~gl", "~libudev", "+libxml2", "~netloc", "~nvml", "~opencl", "+pci", "~rocm", "+shared"], "stacks": ["build_systems", "radiuss", "tutorial", "root", "data-vis-sdk"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/hwloc-2.7.1/linux-ubuntu18.04-x86_64-gcc-7.5.0-hwloc-2.7.1-oixja6dnsnc4mydqswdya2nyt4rlcxpa.spack"}, {"hash": "27dpmmo2otm4djhiugwcehq7tze5ndlb", "compiler": "gcc@=8.4.0", "versions": ["2.7.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~cairo", "~cuda", "~gl", "~libudev", "+libxml2", "~netloc", "~nvml", "~opencl", "+pci", "~rocm", "+shared"], "stacks": ["tutorial", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/hwloc-2.7.1/linux-ubuntu18.04-x86_64-gcc-8.4.0-hwloc-2.7.1-27dpmmo2otm4djhiugwcehq7tze5ndlb.spack"}, {"hash": "pcppumg2yu5wjhrvr5nec22zvgw7afhv", "compiler": "gcc@=7.5.0", "versions": ["2.7.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~cairo", "+cuda", "~gl", "~libudev", "+libxml2", "~netloc", "~nvml", "~opencl", "+pci", "~rocm", "+shared"], "stacks": ["e4s", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/hwloc-2.7.1/linux-ubuntu18.04-x86_64-gcc-7.5.0-hwloc-2.7.1-pcppumg2yu5wjhrvr5nec22zvgw7afhv.spack"}]
---